naloga3/prev22/gen/PrevParser.java
// Generated from /Users/zigapk/University/prev/naloga3/prev22/src/prev/phase/synan/PrevParser.g4 by ANTLR 4.9.2


	package prev.phase.synan;
	
	import java.util.*;
	
	import prev.common.report.*;
	import prev.data.ast.tree.*;
	import prev.data.ast.tree.decl.*;
	import prev.data.ast.tree.expr.*;
	import prev.data.ast.tree.stmt.*;
	import prev.data.ast.tree.type.*;
	

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrevParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KWORD_BOOL=1, KWORD_CHAR=2, KWORD_DEL=3, KWORD_DO=4, KWORD_ELSE=5, KWORD_FUN=6, 
		KWORD_IF=7, KWORD_INT=8, KWORD_NEW=9, KWORD_THEN=10, KWORD_TYP=11, KWORD_VAR=12, 
		KWORD_VOID=13, KWORD_WHERE=14, KWORD_WHILE=15, SYM_LEFT_BRACE=16, SYM_RIGHT_BRACE=17, 
		SYM_LEFT_CURLY_BRACE=18, SYM_RIGHT_CURLY_BRACE=19, SYM_LEFT_BRACKET=20, 
		SYM_RIGHT_BRACKET=21, SYM_DOT=22, SYM_COMMA=23, SYM_COLON=24, SYM_SEMICOLON=25, 
		SYM_AND=26, SYM_OR=27, SYM_NOT=28, SYM_EQU=29, SYM_NEQ=30, SYM_LS=31, 
		SYM_GT=32, SYM_LSE=33, SYM_GTE=34, SYM_MUL=35, SYM_DIV=36, SYM_MOD=37, 
		SYM_PLUS=38, SYM_MINUS=39, SYM_POW=40, SYM_SET=41, CONST_VOID=42, CONST_BOOL=43, 
		CONST_INT=44, INT_ZERO_PADDING_ERR=45, CONST_CHAR=46, CHAR_ERROR_ODD=47, 
		CONST_STR=48, STR_ERROR_ODD=49, IDENTIFIER=50, IDENTIFIER_ERR=51, COMMENT=52, 
		TAB=53, WHITE_SPACE=54, ERROR=55;
	public static final int
		RULE_source = 0, RULE_decl = 1, RULE_decl_type = 2, RULE_decl_var = 3, 
		RULE_decl_fun = 4, RULE_type = 5, RULE_type_atomic = 6, RULE_type_named = 7, 
		RULE_type_array = 8, RULE_type_pointer = 9, RULE_type_record = 10, RULE_type_enclosed = 11, 
		RULE_expr = 12, RULE_expr_const = 13, RULE_expr_var_access = 14, RULE_expr_fun_call = 15, 
		RULE_expr_alloc = 16, RULE_expr_compound = 17, RULE_expr_typecast = 18, 
		RULE_expr_enclosed = 19, RULE_expr_infix_mul = 20, RULE_expr_infix_add = 21, 
		RULE_expr_infix_rel = 22, RULE_expr_infix_and = 23, RULE_expr_infix_or = 24, 
		RULE_expr_prefix = 25, RULE_stmt = 26, RULE_stmt_expr = 27, RULE_stmt_assign = 28, 
		RULE_stmt_cond = 29, RULE_stmt_loop = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"source", "decl", "decl_type", "decl_var", "decl_fun", "type", "type_atomic", 
			"type_named", "type_array", "type_pointer", "type_record", "type_enclosed", 
			"expr", "expr_const", "expr_var_access", "expr_fun_call", "expr_alloc", 
			"expr_compound", "expr_typecast", "expr_enclosed", "expr_infix_mul", 
			"expr_infix_add", "expr_infix_rel", "expr_infix_and", "expr_infix_or", 
			"expr_prefix", "stmt", "stmt_expr", "stmt_assign", "stmt_cond", "stmt_loop"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'bool'", "'char'", "'del'", "'do'", "'else'", "'fun'", "'if'", 
			"'int'", "'new'", "'then'", "'typ'", "'var'", "'void'", "'where'", "'while'", 
			"'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", "','", "':'", "';'", 
			"'&'", "'|'", "'!'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'*'", 
			"'/'", "'%'", "'+'", "'-'", "'^'", "'='", "'none'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KWORD_BOOL", "KWORD_CHAR", "KWORD_DEL", "KWORD_DO", "KWORD_ELSE", 
			"KWORD_FUN", "KWORD_IF", "KWORD_INT", "KWORD_NEW", "KWORD_THEN", "KWORD_TYP", 
			"KWORD_VAR", "KWORD_VOID", "KWORD_WHERE", "KWORD_WHILE", "SYM_LEFT_BRACE", 
			"SYM_RIGHT_BRACE", "SYM_LEFT_CURLY_BRACE", "SYM_RIGHT_CURLY_BRACE", "SYM_LEFT_BRACKET", 
			"SYM_RIGHT_BRACKET", "SYM_DOT", "SYM_COMMA", "SYM_COLON", "SYM_SEMICOLON", 
			"SYM_AND", "SYM_OR", "SYM_NOT", "SYM_EQU", "SYM_NEQ", "SYM_LS", "SYM_GT", 
			"SYM_LSE", "SYM_GTE", "SYM_MUL", "SYM_DIV", "SYM_MOD", "SYM_PLUS", "SYM_MINUS", 
			"SYM_POW", "SYM_SET", "CONST_VOID", "CONST_BOOL", "CONST_INT", "INT_ZERO_PADDING_ERR", 
			"CONST_CHAR", "CHAR_ERROR_ODD", "CONST_STR", "STR_ERROR_ODD", "IDENTIFIER", 
			"IDENTIFIER_ERR", "COMMENT", "TAB", "WHITE_SPACE", "ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PrevParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



		private Location loc(Token tok) { return new Location((prev.data.sym.Token) tok); }
	    private Location loc(Locatable loc) { return new Location(loc); }
	    private Location loc(Token tok1, Token tok2) { return new Location((prev.data.sym.Token) tok1, (prev.data.sym.Token) tok2); }
	    private Location loc(Token tok1, Locatable loc2) { return new Location((prev.data.sym.Token) tok1, loc2); }
	    private Location loc(Locatable loc1, Token tok2) { return new Location(loc1, (prev.data.sym.Token) tok2); }
	    private Location loc(Locatable loc1, Locatable loc2) { return new Location(loc1, loc2); }


	public PrevParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SourceContext extends ParserRuleContext {
		public AstTrees<AstDecl> ast;
		public DeclContext decl;
		public TerminalNode EOF() { return getToken(PrevParser.EOF, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitSource(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitSource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 Vector<AstDecl> res = new Vector<AstDecl>(); 
			setState(66); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(63);
				((SourceContext)_localctx).decl = decl();
				 res.add(((SourceContext)_localctx).decl.ast); 
				}
				}
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KWORD_FUN) | (1L << KWORD_TYP) | (1L << KWORD_VAR))) != 0) );
			 ((SourceContext)_localctx).ast =  new AstTrees<AstDecl>(res);
			setState(71);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public AstDecl ast;
		public Decl_typeContext decl_type;
		public Decl_varContext decl_var;
		public Decl_funContext decl_fun;
		public Decl_typeContext decl_type() {
			return getRuleContext(Decl_typeContext.class,0);
		}
		public Decl_varContext decl_var() {
			return getRuleContext(Decl_varContext.class,0);
		}
		public Decl_funContext decl_fun() {
			return getRuleContext(Decl_funContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KWORD_TYP:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				((DeclContext)_localctx).decl_type = decl_type();
				 ((DeclContext)_localctx).ast =  ((DeclContext)_localctx).decl_type.ast; 
				}
				break;
			case KWORD_VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				((DeclContext)_localctx).decl_var = decl_var();
				 ((DeclContext)_localctx).ast =  ((DeclContext)_localctx).decl_var.ast; 
				}
				break;
			case KWORD_FUN:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				((DeclContext)_localctx).decl_fun = decl_fun();
				 ((DeclContext)_localctx).ast =  ((DeclContext)_localctx).decl_fun.ast; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_typeContext extends ParserRuleContext {
		public AstDecl ast;
		public Token KWORD_TYP;
		public Token IDENTIFIER;
		public TypeContext type;
		public TerminalNode KWORD_TYP() { return getToken(PrevParser.KWORD_TYP, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PrevParser.IDENTIFIER, 0); }
		public TerminalNode SYM_SET() { return getToken(PrevParser.SYM_SET, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Decl_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterDecl_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitDecl_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitDecl_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Decl_typeContext decl_type() throws RecognitionException {
		Decl_typeContext _localctx = new Decl_typeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decl_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			((Decl_typeContext)_localctx).KWORD_TYP = match(KWORD_TYP);
			setState(85);
			((Decl_typeContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			setState(86);
			match(SYM_SET);
			setState(87);
			((Decl_typeContext)_localctx).type = type();
			 ((Decl_typeContext)_localctx).ast =  new AstTypeDecl(loc(((Decl_typeContext)_localctx).KWORD_TYP, ((Decl_typeContext)_localctx).type.ast), (((Decl_typeContext)_localctx).IDENTIFIER!=null?((Decl_typeContext)_localctx).IDENTIFIER.getText():null), ((Decl_typeContext)_localctx).type.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_varContext extends ParserRuleContext {
		public AstDecl ast;
		public Token KWORD_VAR;
		public Token IDENTIFIER;
		public TypeContext type;
		public TerminalNode KWORD_VAR() { return getToken(PrevParser.KWORD_VAR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PrevParser.IDENTIFIER, 0); }
		public TerminalNode SYM_COLON() { return getToken(PrevParser.SYM_COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Decl_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterDecl_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitDecl_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitDecl_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Decl_varContext decl_var() throws RecognitionException {
		Decl_varContext _localctx = new Decl_varContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decl_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			((Decl_varContext)_localctx).KWORD_VAR = match(KWORD_VAR);
			setState(91);
			((Decl_varContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			setState(92);
			match(SYM_COLON);
			setState(93);
			((Decl_varContext)_localctx).type = type();
			 ((Decl_varContext)_localctx).ast =  new AstVarDecl(loc(((Decl_varContext)_localctx).KWORD_VAR, ((Decl_varContext)_localctx).type.ast), (((Decl_varContext)_localctx).IDENTIFIER!=null?((Decl_varContext)_localctx).IDENTIFIER.getText():null), ((Decl_varContext)_localctx).type.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_funContext extends ParserRuleContext {
		public AstDecl ast;
		public Token KWORD_FUN;
		public Token IDENTIFIER;
		public TypeContext type;
		public ExprContext expr;
		public TerminalNode KWORD_FUN() { return getToken(PrevParser.KWORD_FUN, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(PrevParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PrevParser.IDENTIFIER, i);
		}
		public TerminalNode SYM_LEFT_BRACE() { return getToken(PrevParser.SYM_LEFT_BRACE, 0); }
		public TerminalNode SYM_RIGHT_BRACE() { return getToken(PrevParser.SYM_RIGHT_BRACE, 0); }
		public List<TerminalNode> SYM_COLON() { return getTokens(PrevParser.SYM_COLON); }
		public TerminalNode SYM_COLON(int i) {
			return getToken(PrevParser.SYM_COLON, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode SYM_SET() { return getToken(PrevParser.SYM_SET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> SYM_COMMA() { return getTokens(PrevParser.SYM_COMMA); }
		public TerminalNode SYM_COMMA(int i) {
			return getToken(PrevParser.SYM_COMMA, i);
		}
		public Decl_funContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl_fun; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterDecl_fun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitDecl_fun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitDecl_fun(this);
			else return visitor.visitChildren(this);
		}
	}
